plugins {
    id 'application'
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'dev.abhay7'
version = '1.0'

application {
    mainClass = 'dev.abhay7.skribbl.client.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.formdev:flatlaf:3.2'
    implementation 'org.json:json:20240303'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.80'
    implementation project(':server')
}

java {
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += '--enable-preview'
    }

    tasks.withType(Test).configureEach {
        jvmArgs += '--enable-preview'
    }
}

jar {
    manifest {
        attributes(
            'Main-Class': application.mainClass
        )
    }
}